--- a/hyperparams/best_params_for_food_delivery_gym/ppo.yml
+++ b/hyperparams/best_params_for_food_delivery_gym/ppo.yml
@@ -51,6 +51,22 @@ food_delivery_gym/FoodDelivery-medium-obj3-v0:
   policy_kwargs: "dict(net_arch=dict(pi=[64], vf=[64]), activation_fn=nn.Tanh)"
   normalize: true
 
+# Otimização de hiperparâmetros do ambiente com objetivo 4 com normalização e 1.000.000 de passos por 200 trials
+food_delivery_gym/FoodDelivery-medium-obj4-v0:
+  n_timesteps: 18000000
+  policy: 'MultiInputPolicy'
+  n_envs: 4 
+  learning_rate: 0.0005651168883682632
+  ent_coef: 1.538964705609768e-08
+  clip_range: 0.3 
+  n_steps: 512
+  batch_size: 4
+  n_epochs: 1
+  gamma: 0.9963026230261156
+  gae_lambda: 0.9969240695734893
+  max_grad_norm: 1.7113090560578745
+  policy_kwargs: "dict(net_arch=dict(pi=[256, 256], vf=[256, 256]), activation_fn=nn.Tanh)"
+  normalize: true
 
 # # Otimizações de Teste:
 
