--- a/hyperparams/ppo.yml
+++ b/hyperparams/ppo.yml
@@ -651,6 +651,20 @@ food_delivery_gym/FoodDelivery-initial-obj7-v0:
   gae_lambda: 0.95
   normalize: true
 
+food_delivery_gym/FoodDelivery-initial-obj8-v0:
+  n_envs: 4
+  n_timesteps: 100000
+  policy: 'MultiInputPolicy'
+  learning_rate: 3.0e-4
+  ent_coef: 0.0
+  clip_range: 0.2
+  n_steps: 2048
+  batch_size: 64
+  n_epochs: 10
+  gamma: 0.99
+  gae_lambda: 0.95
+  normalize: true
+
 food_delivery_gym/FoodDelivery-medium-obj1-v0:
   n_envs: 4
   n_timesteps: 100000
@@ -721,6 +735,20 @@ food_delivery_gym/FoodDelivery-medium-obj7-v0:
   gae_lambda: 0.95
   normalize: true
 
+food_delivery_gym/FoodDelivery-medium-obj8-v0:
+  n_envs: 4
+  n_timesteps: 100000
+  policy: 'MultiInputPolicy'
+  learning_rate: 3.0e-4
+  ent_coef: 0.0
+  clip_range: 0.2
+  n_steps: 2048
+  batch_size: 64
+  n_epochs: 10
+  gamma: 0.99
+  gae_lambda: 0.95
+  normalize: true
+
 food_delivery_gym/FoodDelivery-complex-obj1-v0:
   n_envs: 1
   n_timesteps: 100000
@@ -778,6 +806,20 @@ food_delivery_gym/FoodDelivery-complex-obj4-v0:
   normalize: true
 
 food_delivery_gym/FoodDelivery-complex-obj7-v0:
+  n_envs: 1
+  n_timesteps: 100000
+  policy: 'MultiInputPolicy'
+  learning_rate: 3.0e-4
+  ent_coef: 0.0
+  clip_range: 0.2
+  n_steps: 2048
+  batch_size: 64
+  n_epochs: 10
+  gamma: 0.99
+  gae_lambda: 0.95
+  normalize: true
+
+food_delivery_gym/FoodDelivery-complex-obj8-v0:
   n_envs: 1
   n_timesteps: 100000
   policy: 'MultiInputPolicy'
